Install flannel after coreos_systemd_install service

--- a/systemd/install_flannel/install_flannel.service
+++ b/systemd/install_flannel/install_flannel.service
@@ -2,6 +2,7 @@
   Description=Flannel Installer
   Requires=etcd.service
   After=etcd.service
+  After=coreos_systemd_install.service
 
 [Service]
   ExecStartPre=bash -c "mkdir -p /opt/bin"
